--- a/src/app/view/historias-medicas/historias-medicas.component.html
+++ b/src/app/view/historias-medicas/historias-medicas.component.html
@@ -886,7 +886,7 @@
                       <i class="bi bi-info-circle-fill"></i>
                       <span>
                         <strong>Consulta con oftalmólogo:</strong> 
-                        <span class="costo-destacado">${{ facturacionData?.montoBase  }}</span>
+                        <span class="costo-destacado">${{ facturacionData?.montoBase }}</span>
                       </span>
                     </div>
 
@@ -906,14 +906,14 @@
                       </div>
                     </div>
 
-                    <!-- TOTAL -->
+                    <!-- TOTAL A PAGAR -->
                     <div class="facturacion-total" [ngClass]="{'sin-cargo': realizoCompraLentes}">
                       <div class="total-label">
                         <i class="bi" [ngClass]="realizoCompraLentes ? 'bi-check-circle' : 'bi-receipt'"></i>
-                        <span>Total consulta:</span>
+                        <span>Total a pagar:</span>
                       </div>
                       <div class="total-monto">
-                        ${{ realizoCompraLentes ? facturacionData?.montoCompraLentes : facturacionData?.montoBase }}
+                        ${{ facturacionData?.montoTotal }}
                       </div>
                     </div>
                   </div>
