--- a/src/app/view/ventas/historial-ventas/historial-ventas.component.scss
+++ b/src/app/view/ventas/historial-ventas/historial-ventas.component.scss
@@ -2287,6 +2287,11 @@
         color: #1976d2;
     }
 
+    &.forma-contado-pendiente {
+        background: #ffebee;
+        color: #c62828;
+    }
+
     &.forma-cashea {
         background: #fff3e0;
         color: #f57c00;
